# code.research

./: .gitignore  LICENSE.md  README.md
qnx/: .clang-format  .clang-tidy  CMakeLists.txt  DEVELOPER.md  README.md
qnx/benchmarks/: CMakeLists.txt  cacheline.md  devctl.md  malloc.md  strcomp.md
qnx/benchmarks/cacheline/: CMakeLists.txt  cacheline_bench.cpp  cacheline_bench.use  options.cpp  options.h
qnx/benchmarks/cacheline/results/: README.md  analyse.py  graph.gnuplot  graph_rpi4.gnuplot  i3-2120t_8M.json  i3-2120t_8M.txt  i7-13850hx_256M.json  i7-13850hx_256M.txt  i7-4930k_32M.json  i7-4930k_32M.txt  i9-13980hx_256M.json  i9-13980hx_256M.txt  intel-t7700_8M.json  intel-t7700_8M.txt  rpi4_8M.json  rpi4_8M.txt  rpi4_qnx710_8M.json  rpi4_qnx710_8M.txt  rpi4_qnx800_8M.json  rpi4_qnx800_8M.txt  rpi5_8M.json  rpi5_8M.txt
qnx/benchmarks/devctl/: CMakeLists.txt  adder.cpp  adder.use  dev-adder.cpp  dev-adder.h  dev-adder.use
qnx/benchmarks/malloc/: CMakeLists.txt  allocator.cpp  allocator.h  config.h.in  malloc_bench.cpp  malloc_bench.use  mallopt.cpp  mallopt.h  mallopt_features.cpp  mallopt_none.cpp  mlock.cpp  mlock.h  syspage.cpp  syspage.h
qnx/benchmarks/malloc/results/: README.md  analyse.ipynb  i7-6700k_CygwinWin10.json  i9-13950hx_Linux.json  i9-13980hx_Linux.json  rpi4_freebsd14.2.json  rpi4_linux.json  rpi4_netbsd10.1.json  rpi4_qnx710.json  rpi4_qnx800.json  rpi5_linux.json  run_linux.sh  skylake-i7-6700T_ubuntu2204.json
qnx/benchmarks/malloc/results/rpi4_linux/: rpi4_linux.json  (+7 more)
qnx/benchmarks/strcomp/: CMakeLists.txt  strcmp_bench.cpp  strcmp_bench.use
qnx/lib/: CMakeLists.txt
qnx/lib/libosqnx/: CMakeLists.txt  README.md
qnx/lib/libosqnx/src/: CMakeLists.txt  asinfo.cpp  pids.cpp
qnx/lib/libosqnx/test/: CMakeLists.txt  asinfo_test.cpp
qnx/lib/libstdext/src/: CMakeLists.txt
qnx/lib/libstdext/test/: CMakeLists.txt  expected_base.cpp  expected_equality.cpp  expected_monadic.cpp  expected_noexcept.cpp
qnx/lib/libubench/: CMakeLists.txt  DEVELOPER.md  README.md
qnx/lib/libubench/benchmark/: CMakeLists.txt  README.md  net_bench.cpp  rcu_bench.cpp  string_bench.cpp
qnx/lib/libubench/docs/: rcu.md
qnx/lib/libubench/src/: CMakeLists.txt  args.cpp  base_clock.h  config.h.in  get_executable_path_bsd.cpp  get_executable_path_common.cpp  get_executable_path_common.h  get_executable_path_linux.cpp  get_executable_path_null.cpp  get_executable_path_qnx.cpp  get_proc_name_common.cpp  get_proc_name_common.h  get_proc_name_freebsd.cpp  get_proc_name_linux.cpp  get_proc_name_netbsd.cpp  get_proc_name_null.cpp  get_proc_name_qnx.cpp  idle_clock_bsd.cpp  idle_clock_cygwin.cpp  idle_clock_linux.cpp  idle_clock_netbsd.cpp  idle_clock_null.cpp  idle_clock_qnx.cpp  net_common.cpp  net_common.h  net_hostname.cpp  net_query_getalias.cpp  net_query_gethwaddr.cpp  net_query_getifaddrs.cpp  net_query_ioctls.cpp  net_query_vlan_bsd.cpp  net_query_vlan_linux.cpp  options.cpp  process_clock_cygwin.cpp  process_clock_linux.cpp  process_clock_null.cpp  process_clock_qnx.cpp  str_intern.cpp  string.cpp  string_strlcpy.cpp  (+14 more)
qnx/lib/libubench/test/: CMakeLists.txt  args_test.cpp  clock_test.cpp  config.h.in  flags_test.cpp  net_test.cpp  options_test.cpp  os_test.cpp  rcu_test.cpp  str_intern_test.cpp  string_test.cpp  strlcpy_test.cpp  sync_event_test.cpp  thread_test.cpp
qnx/lib/libunet/benchmark/: CMakeLists.txt  net_bench.cpp
qnx/lib/libunet/src/: CMakeLists.txt  config.h.in  net_common.cpp  net_common.h  net_domainname_hostent.cpp  net_domainname_nameinfo.cpp  net_query_getalias.cpp  net_query_gethwaddr.cpp  net_query_vlan_bsd.cpp  udp.cpp
qnx/lib/libunet/test/: CMakeLists.txt  net_test.cpp  udp_test.cpp
qnx/poc/: CMakeLists.txt
qnx/poc/bpf_udp4/: CMakeLists.txt  bpf_l2_udp_packet.cpp  bpf_l2_udp_packet.h  bpf_socket.cpp  bpf_socket.h  bpf_udp4.cpp  bpf_udp4.use  bsd_socket.cpp  bsd_socket.h  config.h.in  options.cpp  options.h  udp_socket.h
qnx/poc/bpf_udp4/docs/: README.md
qnx/poc/qnx_statvfs/: CMakeLists.txt  options.cpp  options.h  qnx_statvfs.cpp  qnx_statvfs.use
qnx/scripts/: Makefile  README.md  build.sh
qnx/scripts/docker/: alpine-latest-docker  freebsd-13.5-docker  freebsd-14.2-docker  freebsd-14.3-docker  freebsd-docker  freebsd-old-docker  netbsd-docker  qnx-710-docker  ubuntu-docker  ubuntu-focal-docker  ubuntu-jammy-docker  ubuntu-noble-docker  ubuntu-plucky-docker  ubuntu-resolute-docker
qnx/scripts/docker/qnx/: profile
qnx/tools/: CMakeLists.txt  core_latency.md  iplist.md  lshmem.md  lsqf.md  sdd.md  time_compare.md  udp_load.md
qnx/tools/core_latency/: CMakeLists.txt  arm64.cpp  arm64.h  benchmark.h  config.h.in  core_benchmark.cpp  core_benchmark.h  core_latency.cpp  core_latency.use  corerw_benchmark.cpp  corerw_benchmark.h  options.cpp  options.h  statistics.cpp  statistics.h  sync_event.cpp  sync_event.h  thread_pin.cpp  thread_pin.h  thread_pin_qnx.cpp
qnx/tools/cpuid-x86/: CMakeLists.txt
qnx/tools/cpuid-x86/docs/: DESIGN.md
qnx/tools/iplist/: CMakeLists.txt  iplist.cpp  iplist.use
qnx/tools/lshmem/: CMakeLists.txt  lshmem.cpp  lshmem.use  options.cpp  options.h  pid_mapping.cpp  pid_mapping.h  shmem_map.cpp  shmem_map.h
qnx/tools/lsqf/: CMakeLists.txt  file.cpp  file.h  lsqf.cpp  lsqf.use  options.cpp  options.h  pids.cpp  pids.h
qnx/tools/sdd/: CMakeLists.txt  options.cpp  options.h  payload.cpp  payload.h  sdd.cpp  sdd.use  udp.cpp  udp.h
qnx/tools/time_compare/: CMakeLists.txt  config.h.in  time_compare.cpp  time_compare.use
qnx/tools/udp_load/: CMakeLists.txt  busy_measurement.cpp  busy_measurement.h  config.h.in  l2_eth_udp_pkt.cpp  l2_eth_udp_pkt.h  options.cpp  options.h  udp_load.cpp  udp_load.use  udp_talker.cpp  udp_talker.h  udp_talker_bpf.cpp  udp_talker_bpfmm.cpp  udp_talker_bsdipv4.cpp
qnx/tools/udp_load/contrib/: linux_test.sh  qnx_test.sh  run_test.sh  run_test_batch.sh
qnx/tools/udp_load/doc/: shaper.ipynb
qnx/tools/udp_load/results/: graph.ipynb  results.md
rcu/: .clang-tidy  CMakeLists.txt  README.md
rcu/src/: CMakeLists.txt  main.cpp  rcu.h
rcu/test/: CMakeLists.txt  rcu-test.cpp
(+294 files in other folders)
