add_subdirectory(time_compare)
add_subdirectory(udp_load)
add_subdirectory(iplist)
add_subdirectory(cpuid-x86)
add_subdirectory(sdd)

if(NOT APPLE)
    add_subdirectory(core_latency)
endif()

if(QNXNTO)
    add_subdirectory(lsqf)
    add_subdirectory(lshmem)
endif()

target_clangformat(TARGET core_latency DIR core_latency)
target_clangformat(TARGET cpuid_x86 DIR_RECURSE cpuid-x86/libcpuid/src DIR_RECURSE cpuid-x86/libcpuid/include DIR_RECURSE cpuid-x86/libcpuid/test)
target_clangformat(TARGET iplist DIR iplist)
target_clangformat(TARGET lshmem DIR lshmem)
target_clangformat(TARGET lsqf DIR lsqf)
target_clangformat(TARGET time_compare DIR time_compare)
target_clangformat(TARGET udp_load DIR udp_load)
target_clangformat(TARGET sdd DIR sdd DIR_RECURSE sdd/libsjson/src DIR_RECURSE sdd/libsjson/include DIR_RECURSE sdd/libsjson/test)
